// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connectorLib createBranchConnector 1`] = `
Object {
  "geometry": Object {
    "h": 28,
    "w": 100,
    "x": 0,
    "y": 0,
  },
  "isFault": false,
  "isHighlighted": true,
  "labelType": 0,
  "source": Object {
    "childIndex": 0,
    "guid": "guid",
  },
  "svgInfo": Object {
    "startOffset": Array [
      3,
      3,
    ],
    "svgPathParams": Object {
      "offsets": Array [
        Array [
          -84,
          0,
        ],
        Array [
          -16,
          16,
        ],
        Array [
          0,
          12,
        ],
      ],
      "start": Object {
        "x": 100,
        "y": 0,
      },
    },
  },
  "toBeDeleted": true,
  "type": "branchLeft",
}
`;

exports[`connectorLib createConnectorToNextNode with GoTo connector type and Branch Head 1`] = `
Object {
  "addInfo": Object {
    "menuOpened": false,
    "offsetY": 84,
  },
  "geometry": Object {
    "h": 132,
    "w": 6,
    "x": 0,
    "y": 0,
  },
  "isFault": false,
  "isHighlighted": false,
  "labelOffsetY": 48,
  "labelType": 1,
  "source": Object {
    "childIndex": 0,
    "parent": "parentGuid",
  },
  "svgInfo": Object {
    "endLocation": undefined,
    "geometry": Object {
      "h": 132,
      "w": 132,
      "x": -3,
      "y": 0,
    },
    "path": undefined,
  },
  "toBeDeleted": false,
  "type": "goTo",
}
`;

exports[`connectorLib createConnectorToNextNode with GoTo connector type and Default variant 1`] = `
Object {
  "addInfo": Object {
    "menuOpened": false,
    "offsetY": 60,
  },
  "geometry": Object {
    "h": 108,
    "w": 6,
    "x": 0,
    "y": 0,
  },
  "isFault": false,
  "isHighlighted": false,
  "labelOffsetY": 48,
  "labelType": 0,
  "source": Object {
    "next": "nextGuid",
    "prev": "prevGuid",
  },
  "svgInfo": Object {
    "endLocation": undefined,
    "geometry": Object {
      "h": 108,
      "w": 132,
      "x": -3,
      "y": 0,
    },
    "path": undefined,
  },
  "toBeDeleted": false,
  "type": "goTo",
}
`;

exports[`connectorLib createConnectorToNextNode with GoTo connector type and Fault variant 1`] = `
Object {
  "addInfo": Object {
    "menuOpened": false,
    "offsetY": 60,
  },
  "geometry": Object {
    "h": 108,
    "w": 6,
    "x": 0,
    "y": 0,
  },
  "isFault": false,
  "isHighlighted": false,
  "labelOffsetY": 24,
  "labelType": 4,
  "source": Object {
    "childIndex": -1,
    "parent": "parentGuid",
  },
  "svgInfo": Object {
    "endLocation": undefined,
    "geometry": Object {
      "h": 108,
      "w": 132,
      "x": -3,
      "y": 0,
    },
    "path": undefined,
  },
  "toBeDeleted": false,
  "type": "goTo",
}
`;

exports[`connectorLib createConnectorToNextNode with GoTo connector type and Post Merge variant 1`] = `
Object {
  "addInfo": Object {
    "menuOpened": false,
    "offsetY": 36,
  },
  "geometry": Object {
    "h": 120,
    "w": 6,
    "x": 0,
    "y": 96,
  },
  "isFault": false,
  "isHighlighted": false,
  "labelOffsetY": 48,
  "labelType": 0,
  "source": Object {
    "next": "nextGuid",
    "prev": "prevGuid",
  },
  "svgInfo": Object {
    "endLocation": undefined,
    "geometry": Object {
      "h": 120,
      "w": 132,
      "x": -3,
      "y": 0,
    },
    "path": undefined,
  },
  "toBeDeleted": false,
  "type": "goTo",
}
`;

exports[`connectorLib createConnectorToNextNode with Straight connector type 1`] = `
Object {
  "addInfo": Object {
    "menuOpened": false,
    "offsetY": 0,
  },
  "geometry": Object {
    "h": 144,
    "w": 6,
    "x": 0,
    "y": 0,
  },
  "isFault": false,
  "isHighlighted": false,
  "labelOffsetY": 48,
  "labelType": 0,
  "source": Object {
    "next": "nextGuid",
    "prev": "prevGuid",
  },
  "svgInfo": Object {
    "endLocation": undefined,
    "geometry": Object {
      "h": 144,
      "w": 6,
      "x": -3,
      "y": 0,
    },
    "path": undefined,
  },
  "toBeDeleted": false,
  "type": "straight",
}
`;

exports[`connectorLib createLoopAfterLastConnector 1`] = `
Object {
  "geometry": Object {
    "h": 168,
    "w": 88,
    "x": -88,
    "y": 0,
  },
  "isFault": false,
  "isHighlighted": true,
  "labelOffsetX": 88,
  "labelOffsetY": 48,
  "labelType": 3,
  "source": "guid",
  "svgInfo": Object {
    "startOffset": Array [
      3,
      3,
    ],
    "svgPathParams": Object {
      "offsets": Array [
        Array [
          72,
          0,
        ],
        Array [
          16,
          16,
        ],
        Array [
          0,
          136,
        ],
        Array [
          -16,
          16,
        ],
        Array [
          -56,
          0,
        ],
        Array [
          -16,
          16,
        ],
        Array [
          0,
          8,
        ],
      ],
      "start": Object {
        "x": 0,
        "y": 0,
      },
    },
  },
  "toBeDeleted": false,
  "type": "loopAfterLast",
}
`;

exports[`connectorLib createLoopBackConnector 1`] = `
Object {
  "geometry": Object {
    "h": 168,
    "w": 88,
    "x": 0,
    "y": 0,
  },
  "isFault": false,
  "isHighlighted": false,
  "labelType": 0,
  "source": "guid",
  "svgInfo": Object {
    "startOffset": Array [
      3,
      3,
    ],
    "svgPathParams": Object {
      "offsets": Array [
        Array [
          -72,
          0,
        ],
        Array [
          -16,
          16,
        ],
        Array [
          0,
          112,
        ],
        Array [
          16,
          16,
        ],
        Array [
          56,
          0,
        ],
        Array [
          16,
          -16,
        ],
        Array [
          0,
          -8,
        ],
      ],
      "start": Object {
        "x": 88,
        "y": 0,
      },
    },
  },
  "toBeDeleted": false,
  "type": "loopBack",
}
`;

exports[`connectorLib createMergeConnector 1`] = `
Object {
  "geometry": Object {
    "h": 28,
    "w": 100,
    "x": 0,
    "y": 0,
  },
  "isFault": false,
  "isHighlighted": true,
  "labelType": 0,
  "source": Object {
    "childIndex": 0,
    "guid": "guid",
  },
  "svgInfo": Object {
    "startOffset": Array [
      3,
      0,
    ],
    "svgPathParams": Object {
      "offsets": Array [
        Array [
          0,
          -2,
        ],
        Array [
          16,
          16,
        ],
        Array [
          68,
          0,
        ],
        Array [
          16,
          16,
        ],
        Array [
          0,
          -2,
        ],
      ],
      "start": Object {
        "x": 0,
        "y": 0,
      },
    },
  },
  "toBeDeleted": true,
  "type": "mergeLeft",
}
`;
